syntax = "proto3";
package client;

option go_package = "/proto";

message Client {
  string clientId = 1;
  string token = 2;
  string endpoint = 3;
}
